# Design-Patterns

./: README.md
Laboratory project/: CMakeLists.txt  main.cpp
Laboratory project/Command/: AddCommand.cpp  AddCommand.h  DeleteCommand.cpp  DeleteCommand.h  ICommand.h  UndoRedo.cpp  UndoRedo.h
Laboratory project/Domain/: Song.cpp  Song.h
Laboratory project/Exceptions/: RepositoryException.cpp  RepositoryException.h  UndoRedoException.cpp  UndoRedoException.h
Laboratory project/Iterator/: Iterator.h
Laboratory project/Logger/: MyLogger.cpp  MyLogger.h
Laboratory project/Repository/: CSVRepository.cpp  CSVRepository.h  RepositoryAdapter.cpp  RepositoryAdapter.h  SongRepository.cpp  SongRepository.h
Laboratory project/Service/: SongService.cpp  SongService.h
Laboratory project/Strategy/: Filter.h  FilterByArtistStrategy.h  FilterByGenreStrategy.h  FilterByReleaseYearStrategy.h  Strategy.h
Laboratory project/Tests/: Tests.cpp  Tests.h
Laboratory project/UI/: UI.cpp  UI.h
Laboratory project/data/: songs.csv  test_songs.csv
